# dremeldocs

./: .aiignore  .aws_configs.env  .claudeignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmessage  .gptignore  .mcp.json  .ruff.toml  .well-hidden-secret.txt  6ipd.md  CLAUDE.md  CONTRIBUTORS.md  GIT_WORKFLOW.md  Makefile  PIPELINE_ANALYSIS_REPORT.md  PIPELINE_COMPLETE_FIX.md  PIPELINE_FIX_REPORT.md  PROJECT_INDEX.md  README.md  REFACTORING_SUMMARY.md  SCRIPTS_ANALYSIS_REPORT.md  SECURITY.md  SITE_ANALYSIS_REPORT.md  TEST_FIX_SUMMARY.md  TEST_IMPROVEMENTS.md  TEST_REPORT.md  TROUBLESHOOTING_FINAL.md  TROUBLESHOOTING_REPORT.md  TROUBLESHOOTING_RESULTS.md  TYPE_HINTS_SUMMARY.md  analyze_twitter_structure.py  build.sh  cc-hooks.idea.md  files_to_delete.txt  install_spacy_model.sh  low_quality_analysis.txt  main.py  (+13 more)
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: deploy.yml  tests.yml
.serena/: project.yml
.serena/memories/: PROJECT_KNOWLEDGE_BASE.md  code_style_conventions.md  git_setup_configuration.md  project_learnings_twitter_archive.md  project_nlp_infrastructure.md  project_overview.md  project_structure.md  session_reflection_2025_09_21.md  suggested_commands.md  task_completion_checklist.md  technical_learnings_spacy_uv.md  twitter_pipeline_session_save.md
archive/legacy/: analyze_twitter_structure.py  main.py  twitter-to-mkdocs-project.md
archive/reports/: MCP_SERVER_STATUS.md  PROJECT_STATE.md  SESSION_MEMORY.md  ULTRA_ANALYSIS_TWITTER_ARCHIVE.md
archive/tests/: conftest.py
backups/markdown_20250927_035705/: INSURRECTION.md  tags.md
claudedocs/: API_DOCUMENTATION.md  QUICK_START.md  README.md
config/: CONFIGURATION_ARCHITECTURE.md  DEVELOPER_ENVIRONMENT.md  DEVELOPER_QUICKSTART.md  QUICK_START.md  loader.py  nlp_settings.yaml  pipeline.yml  plugins.yml  themes.yml  validator.py
config/environments/: dev.yml  prod.yml
data/: classified_threads.json  classified_threads_enhanced.json  filtered_threads.json  metrics.json
data/sample_threads/: 2024-01-02_This_is_tweet_number_1_xxxxxxx.md  2024-01-04_This_is_tweet_number_3_xxxxxxx.md  2024-01-06_This_is_tweet_number_5_xxxxxxx.md  2024-01-08_This_is_tweet_number_7_xxxxxxx.md  2024-01-28_Tweet_167_xxxxxxxxxxxxxxxxxxxx.md  2024-01-28_Tweet_251_xxxxxxxxxxxxxxxxxxxx.md  2024-01-28_Tweet_335_xxxxxxxxxxxxxxxxxxxx.md  2024-01-28_Tweet_419_xxxxxxxxxxxxxxxxxxxx.md  2024-01-28_Tweet_83_xxxxxxxxxxxxxxxxxxxxx.md  Fri Sep 06_I_have_been_asked_by_multiple_.md  Mon Jan 01_Discussing_Kants_categorical_i.md  Mon Jan 15_Discussing_the_implications_of.md  Sat Apr 26_The_reason_1776_wasnt_progress.md  Sat Dec 02_A_pernicious_mythology_that_ha.md  Sat Feb 10_Its_not_a_lack_of_discipline_t.md  Tue Jan 02_The_attention_economy_is_funda.md  Wed Oct 09_I_too_once_fell_into_the_trap_.md  _Long_thoughtful_tweet_about_ph.md
data/vocabularies/: dialectical_historical_materialism.yaml  fascism_analysis.yaml  imperialism_colonialism.yaml  marxism_communism.yaml  master_vocabulary.yaml  operational_organizational_theory.yaml  political_economy.yaml  public_health_politics.yaml  social_criticism.yaml
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  BRANCH_PROTECTION_SETUP.md  CICD_PIPELINE.md  CI_SPACY_FIX.md  CLASSIFICATION_REPORT.md  CLASSIFIED_INTERNAL_MEMO.md  CROSS_REFERENCES.md  INDEX.md  MASTER_INDEX.md  METRICS.md  NAVIGATION.md  NAVIGATION_INDEX.md  PIPELINE_REFERENCE.md  PROJECT_INDEX.md  QUICK_START.md  README.md  SCRIPTS_ANALYSIS_REPORT.md  STATUS.md  TAG_NAVIGATION_DESIGN.md  TESTING_FRAMEWORK_SUMMARY.md  setup.md  testing.md  workflow.md
docs/heavy_hitters/: 001-20240906-i.md  001-20240906-the_lake_quonnipaug_conference.md  001_2024-09-06_I_have_been_asked_by_multiple_comrades_to_comment.md  002-20240210-s_not_a.md  002-20240210-that.md  002_2024-02-10_Its_not_a_lack_of_discipline_that_precludes_people.md  003-20241009-i.md  003-20241009-prisons_are_a_way_to_extract_slave_labor.md  003_2024-10-09_I_too_once_fell_into_the_trap_of_prisons_are_a_way.md  004-20231202-both_the_public_consciousness.md  004-20231202-that.md  004_2023-12-02_A_pernicious_mythology_that_has_flourished_largely.md  005-20230822-the_energy_paradox.md  005-20230822-the_energy_paradox_we_all_know_you_need_energy_to.md  005_2023-08-22_The_Energy_Paradox_We_all_know_you_need_energy_to.md  006-20250426-it.md  006-20250426-t_progressive_isn.md  006_2025-04-26_The_reason_1776_wasnt_progressive_isnt_because_it.md  007-20240405-atoms.md  007-20240405-the_pop_science_aphorism.md  008-20240219-i.md  009-20231130-it.md  (+157 more)
markdown/: index.md
scripts/: ANALYSIS_REPORT.md  enhanced_theme_classifier.py  error_handling.py  extract_domain_vocabulary.py  extract_metrics.py  extract_themes.py  generate_heavy_hitters.py  generate_themed_markdown.py  generate_themes_from_tags.py  input_validator.py  integrate_tags_mkdocs.py  interfaces.py  local_filter_pipeline.py  markdown_generator.py  nlp_core.py  pattern_matcher.py  run_full_pipeline.py  security_utils.py  special_agent_detector.py  tag_extraction.py  test_enhanced_extraction.py  test_filename_generation.py  test_transformer_power.py  text_processing.py  text_utilities.py  theme_classifier.py  theme_classifier_original.py  update_docs_metrics.py  vocabulary_builder.py  vocabulary_loader.py
src/: extraction.py
tests/: COVERAGE_REPORT.md  DOCSTRING_IMPROVEMENTS.md  README.md  TESTING_GUIDE.md  TEST_DOCUMENTATION.md  __init__.py  conftest.py  test_configuration.py
twitter-pipeline-docs/: 00-quick-start.md  05-implementation-plan.md  06-technical-specifications.md
(+2464 files in other folders)
