[project]
name = "astradocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "anthropic>=0.7.0",
    "click>=8.1.7",
    "ijson>=3.2.3",
    "loguru>=0.7.2",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.0",
    "mkdocs-minify-plugin>=0.7.1",
    "nltk>=3.8.1",
    "openai>=1.3.0",
    "pandas>=2.1.3",
    "pymdown-extensions>=10.4",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "textstat>=0.7.3",
    "tiktoken>=0.5.1",
    "tqdm>=4.66.1",
]
