[project]
name = "dremeldocs"
version = "0.8.1"
description = "Pipeline for transforming Twitter/X archive into curated MkDocs knowledge base"
readme = "README.md"
authors = [{ name = "@BmoreOrganized" }]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [
  "twitter",
  "archive",
  "mkdocs",
  "documentation",
  "philosophy",
  "politics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  # Core processing
  "ijson>=3.2.3", # Streaming JSON parser for large files
  "spacy>=3.7.0", # NLP library for linguistic text processing
  # Note: SpaCy model must be installed separately via:
  # uv pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl
  # MkDocs and documentation
  "mkdocs>=1.5.3", # Static site generator
  "mkdocs-material>=9.4.0", # Material theme for MkDocs
  "mkdocs-minify-plugin>=0.7.1", # Minification plugin
  "pymdown-extensions>=10.4", # Markdown extensions
  # Utilities (minimal set)
  "click>=8.1.7", # CLI framework (future CLI support)
  "python-dateutil>=2.8.2", # Date parsing utilities
  "pyyaml>=6.0.1", # YAML configuration support
  "psutil>=7.1.0",
  "jsonschema>=4.0.0", # JSON schema validation for configuration
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
]

logging = [
  "loguru>=0.7.2", # Enhanced logging
]

extras = [
  "tqdm>=4.66.1",         # Progress bars
  "python-dotenv>=1.0.0", # Environment variables
]

[project.urls]
"Homepage" = "https://github.com/percy-raskova/astradocs"
"Bug Tracker" = "https://github.com/percy-raskova/dremeldocs/issues"
"Documentation" = "https://yourusername.github.io/dremeldocs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "types-python-dateutil>=2.9.0.20241206",
    "types-pyyaml>=6.0.12.20241230",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = false
exclude = [
    "scripts/archived_experiments/",
    "source/",
    "build/",
    "dist/"
]

[[tool.mypy.overrides]]
module = [
    "text_processing",
    "text_utilities",
    "nlp_core",
    "tag_extraction",
    "ijson",
    "sklearn.*"
]
ignore_missing_imports = true
